Adding more support for mappers, started on logging support.